--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "license": "ISC",
   "author": "Carlos Gabriel",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx webpack serve",
     "build": "npx webpack"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.2",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
